--- a/client-data/board.css
+++ b/client-data/board.css
@@ -10,7 +10,7 @@ html, body, svg {
 
 #loadingMessage {
 	font-size: 1.5em;
-	background: #3339 linear-gradient( #C4DFFF, #8FA2BC);
+	background: #eee linear-gradient( #eee, #ccc);
 	padding: 20px;
 	width: 40%;
 	line-height: 50px;
@@ -20,11 +20,12 @@ html, body, svg {
 	top: 40%;
 	left: 30%;
 	z-index: 1;
-	box-shadow: 0 0 2px black;
+	box-shadow: 0 0 2px #333;
 	transition: 1s;
 }
 
 #loadingMessage.hidden {
+	display:none;
 	opacity: 0;
 	z-index: -1;
 }
@@ -33,20 +34,31 @@ html, body, svg {
 	content: "...";
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+#menu::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+#menur {
+    -ms-overflow-style: none;
+}
+
+
 #menu {
 	font-size: 16px;
 	border-radius:0;
-	overflow:hidden;
+	overflow-y: scroll;
 	position:fixed;
+	margin-bottom:30px;
 	left:0;
 	top:0;
 	color:black;
 	height:100%;
+	//width:300px;
 	transition-duration:1s;
 	cursor:default;
 	padding: 10px;
-	pointer-events: none;
-	width: 700px;
 }
 
 #menu.closed {
@@ -75,37 +87,34 @@ html, body, svg {
 	padding:0;
 }
 
+@keyframes minimize {
+	to {max-width:100%}
+}
+
 #menu .tool {
+	 -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
 	pointer-events: auto;
 	white-space: nowrap;
 	list-style-position:inside;
-	border:0;
+	border:1px solid #eeeeee;
 	text-decoration:none;
-	transition-duration:0.5s;
 	cursor:pointer;
-	background: linear-gradient( #C4DFFF, #8FA2BC);
+	background: #FFF;
 	margin-top: 10px;
-	height: 60px;
-	line-height: 60px;
-	border-radius: 30px;
-	max-width: 60px;
-	transition-duration: .5s;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 0px;
+	max-width: 40px;
+	transition-duration: .2s;
 	overflow: hidden;
 	width: max-content;
 	box-shadow: inset 0 0 3px #8FA2BC;
-}
-
-
-@keyframes minimize {
-	to {max-width:100%;}
-}
-#menu .tool:hover {
-	color:black;
-	animation-name: minimize;
-	animation-duration: 1.2s;
-	animation-iteration-count: 2;
-	animation-timing-function: cubic-bezier(.4,.2,.2,1);
-	animation-direction: alternate;
 }
 
 #menu .tool:focus-within,
@@ -113,9 +122,57 @@ html, body, svg {
 	max-width:100%;
 }
 
-#menu .tool.curTool {
-  box-shadow: 0 0 5px #0074D9;
-  background: linear-gradient(#96E1FF, #36A2FF);
+#menu .tool-popout {
+	 -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
+	pointer-events: auto;
+	white-space: nowrap;
+	list-style-position:inside;
+	border:1px solid #eeeeee;
+	text-decoration:none;
+	cursor:pointer;
+	background: #FFF;
+	margin-top: 10px;
+	height: 40px;
+	line-height: 40px;
+	border-radius: 0px;
+	max-width: 40px;
+	transition-duration: .2s;
+	overflow: hidden;
+	width: max-content;
+	box-shadow: inset 0 0 3px #8FA2BC;
+}
+
+#menu .tool-popout:focus-within,
+#menu  #settings .tool-popout:hover {
+	max-width:100%;
+}
+
+
+#menu .tool:hover, #menu .tool--popout:hover{
+	color:black;
+	//animation-name: minimize;
+	//animation-duration: 1.2s;
+	//animation-iteration-count: 2;
+	//animation-timing-function: cubic-bezier(.08,.82,.17,1);
+	//animation-direction: alternate;
+}
+
+#menu .tool-extra {
+	margin:0px 3px 0px 5px;
+	width:39px;
+	display:inline-block
+}
+
+
+#menu .tool.curTool, #menu .tool-extra.curTool {
+  box-shadow: 0 0 5px #0074c9;
+  //background: linear-gradient(#96E1FF, #36A2FF);
 }
 
 #menu .tool-icon {
@@ -123,12 +180,12 @@ html, body, svg {
 	text-align:center;
 	font-size:24px;
 	width: 30px;
-	margin-left: 15px;
+	margin-left: 5px;
 	margin-right: 26px;
 	height: 30px;
 	max-height: 24px;
 	height: 100%;
-	margin: 0px 26px auto 15px;
+	margin: 0px 26px auto 4px;
 	font-family: mono;
 }
 
@@ -137,17 +194,34 @@ html, body, svg {
 	margin: auto;
 }
 
+#menu .tool-icon-popout {
+	display: inline-block;
+	text-align:center;
+	font-size:24px;
+	width: 30px;
+	height: 30px;
+	max-height: 24px;
+	height: 100%;
+	margin: 0px 0px auto 4px;
+	font-family: mono;
+}
+
+#menu .tool-icon-popout > * {
+	display: block;
+	margin: auto;
+}
+
 #menu .tool-name {
 	text-align: center;
-	font-size: 25px;
+	font-size: .9em;
 	margin-right: 30px;
 }
 #menu .tool-name.slider {
 	display: inline-block;
     width: 150px;
     height: 30px;
-    font-size: 1.3em;
-    line-height: 25px;
+    font-size: .9em;
+    line-height: 15px;
     vertical-align: top;
     padding: 6px;
 
@@ -158,36 +232,19 @@ input {
 }
 
 #chooseColor {
-	width:5vw;
+	width:100%;
 	height:100%;
-	border:1px solid black;
-	border-radius:3px;
+line-height:30x;
+	border:0px solid black;
+	border-radius:0px;
 	color:black;
-	text-shadow: 0 0 6px white;
+	text-shadow: 0 0 0px white;
 	display: block;
 	width: 100%;
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding:0px;
 }
 
-.colorPresets {
-	width: 100%;
-	height: 100%;
-	display: inline-block;
-	padding-right: 20px;
-	vertical-align: middle;
-}
-
-.colorPresetButton {
-	width: 30px;
-	height: 30px;
-	border: 1px solid black;
-	border-radius: 3px;
-	display: inline-block;
-	margin-right: 6px;
-	padding: 0;
-	vertical-align: text-bottom;
-}
 
 .rangeChooser {
 	display: block;
@@ -195,4 +252,28 @@ input {
 	width: 100%;
 	margin: 0;
 	background: transparent;
+}
+
+line {
+	fill: none;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+}
+
+path {
+	fill: none;
+	stroke-linecap: round;
+	stroke-linejoin: round;
+}
+
+#canvas rect {
+	//fill: none;
+}
+
+
+
+text {
+	font-family:"Arial", "Helvetica", sans-serif;
+	user-select:none;
+	-moz-user-select:none;
 }
