--- a/client-data/board.css
+++ b/client-data/board.css
@@ -173,6 +173,9 @@ html, body, svg {
 	background-color:#eeeeff;
   }
 
+
+   
+
 #menu .tool:active {
 	box-shadow: inset 0 0 1px #ddeeff;
 	background-color:#eeeeff;
@@ -237,9 +240,11 @@ html, body, svg {
 
 }
 
-input {
+#canvas input {
 	font-size:16px;
 }
+
+
 
 #chooseColor {
 	width:100%;
@@ -264,13 +269,13 @@ line-height:30x;
 	background: transparent;
 }
 
-line {
+@canvas line {
 	fill: none;
 	stroke-linecap: round;
 	stroke-linejoin: round;
 }
 
-path {
+#canvas path {
 	fill: none;
 	stroke-linecap: round;
 	stroke-linejoin: round;
@@ -282,7 +287,7 @@ path {
 
 
 
-text {
+#canvas text {
 	font-family:"Arial", "Helvetica", sans-serif;
 	user-select:none;
 	-moz-user-select:none;
