Preparation for menus
Transform tool can select/deselect handles

After calling clear, messages are not accepted until sync with socket of origin

Fixed an issue with storing messages.

Fixed an issue with handling messages if they get out of sync.

--- a/client-data/board.css
+++ b/client-data/board.css
@@ -39,6 +39,10 @@ html, body, svg {
     display: none;
 }
 
+/*TESTING MENUS*/
+.popover.mypopover {
+	border: 2px solid blue;
+}
 
 #menu {
 	-ms-overflow-style: none;
