--- a/client-data/board.css
+++ b/client-data/board.css
@@ -35,13 +35,8 @@ html, body, svg {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-#menu::-webkit-scrollbar {
+.menu::-webkit-scrollbar {
     display: none;
-}
-
-/*TESTING MENUS*/
-.popover.mypopover {
-	border: 2px solid blue;
 }
 
 #menu {
@@ -56,9 +51,8 @@ html, body, svg {
 	top:0;
 	color:black;
 	height:100%;
-	//width:300px;
+	/*width:300px;*/
 	transition-duration:1s;
-	cursor:default;
 	padding: 10px;
 }
 
@@ -72,7 +66,12 @@ html, body, svg {
 	transition-duration:1s;
 }
 
-#menu h2{ /*Menu title ("Menu")*/
+.menu {
+	cursor:default;
+
+}
+
+.menu h2{ /*Menu title ("Menu")*/
 	display: none;
 	font-size:4vh;
 	text-align: center;
@@ -83,7 +82,7 @@ html, body, svg {
 	margin:0;
 }
 
-#menu .tools {
+.menu .tools {
 	list-style-type:none;
 	padding:0;
 }
@@ -92,7 +91,7 @@ html, body, svg {
 	to {max-width:100%}
 }
 
-#menu .tool {
+.menu .tool {
 	 -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
@@ -110,7 +109,7 @@ html, body, svg {
 	margin-top: 10px;
 	height: 40px;
 	line-height: 40px;
-	border-radius: 0px;
+	border-radius: 3px;
 	max-width: 40px;
 	transition-duration: .2s;
 	overflow: hidden;
@@ -119,12 +118,12 @@ html, body, svg {
 	/*box-shadow: inset 0 0 3px #8FA2BC;*/
 }
 
-#menu .tool:focus-within,
-#menu  #settings .tool:hover {
+.menu .tool:focus-within,
+.menu  #settings .tool:hover {
 	max-width:100%;
 }
 
-#menu .tool-popout {
+.menu .tool-popout {
 	 -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
      -khtml-user-select: none; /* Konqueror HTML */
@@ -142,7 +141,7 @@ html, body, svg {
 	margin-top: 10px;
 	height: 40px;
 	line-height: 40px;
-	border-radius: 0px;
+	border-radius: 3px;
 	max-width: 40px;
 	transition-duration: .2s;
 	overflow: hidden;
@@ -151,48 +150,47 @@ html, body, svg {
 	/*box-shadow: inset 0 0 3px #8FA2BC;*/
 }
 
-#menu .tool-popout:focus-within,
-#menu  #settings .tool-popout:hover {
+.menu .tool-popout:focus-within,
+.menu  #settings .tool-popout:hover {
 	max-width:100%;
 }
 
 
-#menu .tool:hover, #menu .tool--popout:hover{
+.menu .tool:hover, .menu .tool--popout:hover{
 	color:black;
-	//animation-name: minimize;
-	//animation-duration: 1.2s;
-	//animation-iteration-count: 2;
-	//animation-timing-function: cubic-bezier(.08,.82,.17,1);
-	//animation-direction: alternate;
+	/*
+	animation-name: minimize;
+	animation-duration: 1.2s;
+	animation-iteration-count: 2;
+	animation-timing-function: cubic-bezier(.08,.82,.17,1);
+	animation-direction: alternate;
+	*/
 }
 
-#menu .tool-extra {
+.menu .tool-extra {
 	margin:0px 3px 0px 5px;
 	width:39px;
 	display:inline-block
 }
 
-#menu .oneTouch:active {
+.menu .oneTouch:active {
 	border-radius: 3px;
 	background-color:#eeeeff;
   }
 
-
-   
-
-#menu .tool:active {
+.menu .tool:active {
 	box-shadow: inset 0 0 1px #ddeeff;
 	background-color:#eeeeff;
-	//box-shadow: inset 0 0 3px #7FB2CC, 0 0 5px #0064d9;
+	/*box-shadow: inset 0 0 3px #7FB2CC, 0 0 5px #0064d9;*/
   }
 
 
-#menu .tool.curTool, #menu .tool-extra.curTool {
+.menu .tool.curTool, .menu .tool-extra.curTool {
   box-shadow: 0 0 5px #0064d9;
-  //background: linear-gradient(#96E1FF, #36A2FF);
+  /*background: linear-gradient(#96E1FF, #36A2FF);*/
 }
 
-#menu .tool-icon {
+.menu .tool-icon {
 	display: inline-block;
 	text-align:center;
 	font-size:24px;
@@ -206,12 +204,12 @@ html, body, svg {
 	font-family: mono;
 }
 
-#menu .tool-icon > * {
+.menu .tool-icon > * {
 	display: block;
 	margin: auto;
 }
 
-#menu .tool-icon-popout {
+.menu .tool-icon-popout {
 	display: inline-block;
 	text-align:center;
 	font-size:24px;
@@ -223,17 +221,43 @@ html, body, svg {
 	font-family: mono;
 }
 
-#menu .tool-icon-popout > * {
+.menu .tool-icon-popout > * {
 	display: block;
 	margin: auto;
 }
 
-#menu .tool-name {
+.popover.menu {
+	border:1px solid #dddddd;
+	box-shadow: 0 0 3px #7FB2CC;
+}
+
+.popover .popover-body {
+	-webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
+	cursor:pointer;
+	padding: 5px 5px 5px 5px;
+}
+
+.popover .tool-extra {
+	cursor:pointer;
+	margin: 0px 0px 0px 0px;
+}
+
+.popover .tool-icon {
+	margin: 0px 4px 0px 4px;
+}
+
+.menu .tool-name {
 	text-align: center;
 	font-size: .9em;
 	margin-right: 30px;
 }
-#menu .tool-name.slider {
+.menu .tool-name.slider {
 	display: inline-block;
     width: 150px;
     height: 30px;
@@ -332,3 +356,4 @@ line-height:30x;
 	user-select:none;
 	-moz-user-select:none;
 }
+
