Put in a user counter.
Improved the calculation of the dimensions of the transform's bounding rectangle, factoring in the current transform and the stroke-width.

Added an arrow tool.

--- a/client-data/board.css
+++ b/client-data/board.css
@@ -324,6 +324,17 @@ html, body, svg {
 	top:12px;
 }
 
+#usercount{
+	position:fixed;
+	bottom:20px;
+	right:20px;
+	width:25px;
+	height:16px;
+	text-align:center;
+	font-size:.75rem;
+	color:gray;
+}
+
 #compass #south{
 	left:16px;
 	top:24px;
