--- a/client-data/board.css
+++ b/client-data/board.css
@@ -70,6 +70,7 @@ html, body, svg {
 	/*width:300px;*/
 	transition-duration:1s;
 	padding: 10px;
+	z-index:98;
 }
 
 #menu.closed {
@@ -349,8 +350,62 @@ html, body, svg {
 	font-size:16px;
 }
 
+.window-focused {
+	z-index:8;
+}
+
+.window-icon-button{
+	margin-top:-1.6px;
+}
+
+.window-unfocused{
+	z-index:7;
+}
+
+button.close.window-button{
+	padding-left:10px;
+}
+
+.window-button:focus{
+	outline: none;
+}
+
+.tooltip.bs-tooltip-auto[x-placement^=top] .arrow::before, .tooltip.bs-tooltip-top .arrow::before {
+    margin-left: -3px;
+    content: "";
+    border-width: 5px 5px 0;
+    border-top-color: #008ec3;
+}
 
 
+
+.tooltip.bs-tooltip-auto[x-placement^=right] .arrow::before, .tooltip.bs-tooltip-right .arrow::before {
+    margin-top: -3px;
+    content: "";
+    border-width: 5px 5px 5px 0;
+    border-right-color: #008ec3;
+}
+
+.tooltip.bs-tooltip-auto[x-placement^=bottom] .arrow::before, .tooltip.bs-tooltip-bottom .arrow::before {
+    margin-left: -3px;
+    content: "";
+    border-width: 0 5px 5px;
+    border-bottom-color: #008ec3;
+}
+
+.tooltip.bs-tooltip-auto[x-placement^=left] .arrow::before, .tooltip.bs-tooltip-left .arrow::before {
+    right: 0;
+    margin-top: -3px;
+    content: "";
+    border-width: 5px 0 5px 5px;
+    border-left-color: #008ec3;
+}
+
+
+
+.tooltip .tooltip-inner {
+    background-color: #008ec3;
+}
 #chooseColor {
 	width:100%;
 	height:100%;
@@ -373,5 +428,6 @@ line-height:30x;
 	margin: 0;
 	background: transparent;
 }
+
 
 
